Remove js-actions-toggle that was used on mobile. Fix bug that did not show status on mobile view for projects.

--- a/hypha/static_src/sass/print.scss
+++ b/hypha/static_src/sass/print.scss
@@ -94,8 +94,6 @@ footer,
 .header__button-container,
 .status-bar,
 .tabs__container,
-.js-actions-toggle,
-.js-actions-sidebar,
 .cookieconsent,
 .djhj,
 .no-print {
